--- a/learnvue/day1/02-动态绑定属性/02-v-bind动态绑定class(1).html
+++ b/learnvue/day1/02-动态绑定属性/02-v-bind动态绑定class(1).html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .active {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
-        <img :src="imgURL" alt="">
+        <h2 class="title" :class="{active: isActive, line: isLine}">{{message}}</h2>
+        <button @click="btnclick">按钮</button>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
@@ -15,7 +21,14 @@
         el: '#app',
         data: {
             message: '你好啊',
-            // imgURL: 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1583679731722&di=1a357faca19d1dbbe00460269731a4d4&imgtype=0&src=http%3A%2F%2F5b0988e595225.cdn.sohucs.com%2Fimages%2F20181003%2F0f8307fe3de6468d8b51c53b276e9e1b.jpeg'
+            active: 'active',
+            isActive: true,
+            isLine: true
+        },
+        methods: {
+            btnclick: function () {
+                this.isActive = !this.isActive
+            }
         }
     })
 </script>
