--- a/learnvue/day2/00-ES6补充/04-对象字面量的增强写法.html
+++ b/learnvue/day2/00-ES6补充/04-对象字面量的增强写法.html
@@ -7,7 +7,36 @@
 </head>
 <body>
 <script>
-    const obj = new Object()
+    // const obj = new Object()
+    // const obj = {
+    //     name: 'why',
+    //     age: 18,
+    //     run: function () {
+    //         console.log('在奔跑');
+    //     }
+    //     run: function () {
+    //         console.log('在奔跑');
+    //     }
+    // }
+    // 1. 属性的增强写法
+    const name = 'why';
+    const age = 18;
+    const height = 188
+
+    const obj = {
+        name,
+        age,
+        height
+    }
+    console.log(obj)
+    const obj = {
+        run() {
+            
+        },
+        eat () {
+            
+        }
+    }
 </script>
 </body>
 </html>
