--- a/learnvue/day1/04-事件监听/01-v-on的基本使用.html
+++ b/learnvue/day1/04-事件监听/01-v-on的基本使用.html
@@ -7,14 +7,24 @@
 </head>
 <body>
     <div id="app">
-        <h2>{{message}}</h2>
+        <h2>{{counter}}</h2>
+        <button @click="increment">+</button>
+        <button @click="descrement">-</button>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
     const app = new Vue({
         el: '#app',
         data: {
-            message: '你好啊',
+            counter: 0
+        },
+        methods: {
+            increment() {
+                this.counter += 1
+            },
+            descrement() {
+                this.counter--;
+            }
         }
     })
 </script>
