--- a/learnvue/day1/09-组件化开发/10-组件通信-子传父(自定义事件).html
+++ b/learnvue/day1/09-组件化开发/10-组件通信-子传父(自定义事件).html
@@ -7,27 +7,40 @@
 </head>
 <body>
     <div id="app">
-        <cpn :c-info="info" :child-my-message="message"></cpn>
+        <cpn @itemclick="cpnClick"></cpn>
     </div>
     <template id="cpn">
       <div>
-        <h2>{{cInfo}}</h2>
-        <h2>{{childMyMessage}}</h2>
+        <button v-for="item in categories" @click="btnclick(item)">{{item.name}}</button>
       </div>
     </template>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
   const cpn = {
     template: '#cpn',
+    data() {
+      return {
+        categories: [
+          {id: 'aaa', name: '热门推荐'},
+          {id: 'bbb', name: '手机数码'}
+        ]
+      }
+    },
+    methods: {
+      btnclick(item) {
+        this.$emit('itemclick', item)
+      }
+    }
   }
   const app = new Vue({
       el: '#app',
       data: {
-          info: {
-            name: 'why',
-            age: 18,
-            height: 1.88
-          }
+        
+      },
+      methods:{
+        cpnClick(item) {
+          console.log(item)
+        }
       },
       components: {
         cpn
